[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "fastapi-idempotency"
dynamic = ["version"]
description = "Opinionated Idempotency-Key middleware for FastAPI / Starlette."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "ronango", email = "samsonov.roman.dev@gmail.com" }]
keywords = ["fastapi", "starlette", "asgi", "idempotency", "middleware", "http"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "starlette>=0.37",
    "msgpack>=1.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]

[project.urls]
Homepage = "https://github.com/ronango/fastapi-idempotency"
Repository = "https://github.com/ronango/fastapi-idempotency"
Issues = "https://github.com/ronango/fastapi-idempotency/issues"
Changelog = "https://github.com/ronango/fastapi-idempotency/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "mypy>=1.11",
    "ruff>=0.6",
    "pip-audit>=2.7",
    "testcontainers[redis]>=4.0",
]

[tool.hatch.version]
path = "src/fastapi_idempotency/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_idempotency"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle + pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "SIM",                # simplify
    "RUF",                # ruff-specific
    "N",                  # pep8-naming
    "ASYNC",              # async checks
    "PTH",                # pathlib
    "TID",                # tidy imports
    "C4",                 # comprehensions
    "ERA",                # eradicate
    "PL",                 # pylint
]
ignore = [
    "PLR0913",            # too many arguments: middleware constructors are wide by design
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.ruff.lint.isort]
# Keep `from x import (A as A, B as B)` re-exports in a single block instead
# of splitting them onto separate from-lines.
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
plugins = []
warn_unreachable = true
warn_unused_ignores = true
enable_error_code = ["redundant-expr", "truthy-bool", "possibly-undefined"]

[[tool.mypy.overrides]]
module = ["msgpack.*", "testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "redis: tests that require a live Redis (testcontainers)",
    "slow: slow tests (property-based, benchmarks)",
]

[tool.coverage.run]
branch = true
source = ["src/fastapi_idempotency"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "\\.\\.\\.$",
    "def __repr__",
    "@overload",
]
